--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "prisma": "file:",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.18.0"
   }
 }
